--- a/basic/formelements.html
+++ b/basic/formelements.html
@@ -14,6 +14,9 @@
 <h1>We are getting started</h1>
 <p>Hope lives on to let you hope.</p>
 <p>Smile along along the way.</p>
+<button onclick="window.open('https://www.google.com', 'newwindow')">Try it</button>
+
+<a href="print.html"  onclick="window.open('http://localhost/formelements.html', 'newwindow'); return false;"> Print</a>
 
 <form class="form-horizontal">
 <fieldset>
