--- a/basic/formelements.html
+++ b/basic/formelements.html
@@ -14,7 +14,7 @@
 <h1>We are getting started</h1>
 <p>Hope lives on to let you hope.</p>
 <p>Smile along along the way.</p>
-<button onclick="window.open('https://www.google.com', 'newwindow')">Try it</button>
+<button onclick="window.open('https://www.google.com', 'newwindow', '{width: 300, height:300}')">Try it</button>
 
 <a href="print.html"  onclick="window.open('http://localhost/formelements.html', 'newwindow'); return false;"> Print</a>
 
