--- a/basic/formelements.html
+++ b/basic/formelements.html
@@ -17,7 +17,7 @@
 <button onclick="window.open('https://www.google.com', 'newwindow', {width: 300, height:300})">Try it</button>
 
 <a href="print.html"  onclick="window.open('http://localhost/formelements.html', 'newwindow'); return false;"> Print</a>
-
+<a href="#"  onclick="alert('Hi There!'); return false;"> Show an alert</a>
 <form class="form-horizontal">
 <fieldset>
 
